--- a/index.html
+++ b/index.html
@@ -14,9 +14,270 @@
 </head>
 
 <body>
-    <h2>Panda Commerce</h2>
+
+    <!-- header start  -->
+    <header>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- image slider  -->
+
+        <section class="container rounded my-5" style="background-color: #FCEAE8;">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center p-4">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>This is the best tv in the world for people who just want to waste time in front
+                                    of tv</p>
+                                <h1 class="mb-3 mt-4" style="color: #ff136ecb;">$1200</h1>
+
+                                <a class="px-4 py-2 rounded text-white"
+                                    style="text-decoration: none;background-color: #ff136ecb;" href="">Buy
+                                    now</a>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center p-4">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world</p>
+                                <h1 class="mb-3 mt-4" style="color: #ff136ecb;">$420</h1>
+                                <a class="px-4 py-2 rounded text-white"
+                                    style="text-decoration: none;background-color: #ff136ecb;" href="">Buy
+                                    now</a>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center p-4">
+                            <div class="col-lg-7">
+                                <h1>X-Box for your living room</h1>
+                                <p>This is the best X-Box in the world for people who just want to waste time in
+                                    front
+                                    of fake sports</p>
+                                <h1 class="mb-3 mt-4" style="color: #ff136ecb;">$600</h1>
+                                <a class="px-4 py-2 rounded text-white"
+                                    style="text-decoration: none;background-color: #ff136ecb;" href="">Buy
+                                    now</a>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+    </header>
 
 
+
+
+    <main>
+        <!-- categories -->
+        <section class="container my-5">
+
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="row d-flex align-items-center bg-warning bg-opacity-80 rounded-3 p-3">
+                        <div class="col-6 col-md-6 col-lg-6 text-white">
+                            <h1>Watch</h1>
+                        </div>
+                        <div class="col-6 col-md-6 col-lg-6">
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="row d-flex align-items-center bg-success bg-opacity-75 rounded-3 p-3">
+                        <div class="col-6 col-md-6 col-lg-6 text-white">
+                            <h1>Bag</h1>
+                        </div>
+                        <div class="col-6 col-md-6 col-lg-6">
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="row d-flex align-items-center bg-primary bg-opacity-75 rounded-3 p-3">
+                        <div class="col-6 col-md-6 col-lg-6 text-white">
+                            <h1>Shoes</h1>
+                        </div>
+                        <div class="col-6 col-md-6 col-lg-6">
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="container">
+
+            <h2>Shoes</h2>
+
+            <div class="row mb-5">
+                <div class="card shadow col-12 col-md-6 col-lg-4">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional.</p>
+                        <h5 class="mb-3">$120</h5>
+                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
+                            class="px-3 py-2 rounded-3 text-white">Buy now
+                            >></a>
+                    </div>
+                </div>
+
+                <div class="card shadow col-12 col-md-6 col-lg-4">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional.</p>
+                        <h5 class="mb-3">$120</h5>
+                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
+                            class="px-3 py-2 rounded-3 text-white">Buy now
+                            >></a>
+                    </div>
+                </div>
+
+                <div class="card shadow col-12 col-md-6 col-lg-4">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional.</p>
+                        <h5 class="mb-3">$120</h5>
+                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
+                            class="px-3 py-2 rounded-3 text-white">Buy now
+                            >></a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="container">
+            <h2>Backpack</h2>
+            <div class="row mb-5">
+                <div class="card shadow col-12 col-md-6 col-lg-4">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Red Bag</h5>
+                        <h5 class="mb-3">$120</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
+                            class="px-3 py-2 rounded-3 text-white">Buy now
+                            >></a>
+                    </div>
+                </div>
+
+                <div class="card shadow col-12 col-md-6 col-lg-4">
+                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Blue Bag</h5>
+                        <h5 class="mb-3">$320</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
+                            class="px-3 py-2 rounded-3 text-white">Buy now
+                            >></a>
+                    </div>
+                </div>
+
+                <div class="card shadow col-12 col-md-6 col-lg-4">
+                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Black Bag</h5>
+                        <h5 class="mb-3">$169</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height action.</p>
+                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
+                            class="px-3 py-2 rounded-3 text-white">Buy now
+                            >></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container d-flex justify-content-center my-5 py-5" style="background-color: #FCEAE8;">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <form class="">
+                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                    <button style="background-color:#ff136ecb" class="btn btn-outline-success text-white mt-2"
+                        type="submit">Submit</button>
+                </form>
+            </div>
+        </section>
+
+    </main>
+
+
+
+
+    <footer class="d-flex justify-content-center">
+        <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+    </footer>
 
 
 
