--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- custom styles  -->
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -62,9 +66,8 @@
                                     of tv</p>
                                 <h1 class="mb-3 mt-4" style="color: #ff136ecb;">$1200</h1>
 
-                                <a class="px-4 py-2 rounded text-white"
-                                    style="text-decoration: none;background-color: #ff136ecb;" href="">Buy
-                                    now</a>
+                                <button class="buy-now-button px-4 py-2">Buy
+                                    now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -80,9 +83,9 @@
                                     front
                                     of funky world</p>
                                 <h1 class="mb-3 mt-4" style="color: #ff136ecb;">$420</h1>
-                                <a class="px-4 py-2 rounded text-white"
-                                    style="text-decoration: none;background-color: #ff136ecb;" href="">Buy
-                                    now</a>
+
+                                <button class="buy-now-button px-4 py-2">Buy
+                                    now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -98,9 +101,9 @@
                                     front
                                     of fake sports</p>
                                 <h1 class="mb-3 mt-4" style="color: #ff136ecb;">$600</h1>
-                                <a class="px-4 py-2 rounded text-white"
-                                    style="text-decoration: none;background-color: #ff136ecb;" href="">Buy
-                                    now</a>
+
+                                <button class="buy-now-button px-4 py-2">Buy
+                                    now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -136,33 +139,36 @@
 
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="row d-flex align-items-center bg-warning bg-opacity-80 rounded-3 p-3">
+                    <div
+                        class="row m-3 d-flex align-items-center justify-content-center bg-warning bg-opacity-80 rounded-3 p-3">
                         <div class="col-6 col-md-6 col-lg-6 text-white">
                             <h1>Watch</h1>
                         </div>
-                        <div class="col-6 col-md-6 col-lg-6">
+                        <div class="col-6 col-md-6 col-lg-6 categories">
                             <img src="images/categories/watch.png" alt="">
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="row d-flex align-items-center bg-success bg-opacity-75 rounded-3 p-3">
+                    <div
+                        class="row m-3 d-flex align-items-center justify-content-center bg-success bg-opacity-75 rounded-3 p-3">
                         <div class="col-6 col-md-6 col-lg-6 text-white">
                             <h1>Bag</h1>
                         </div>
-                        <div class="col-6 col-md-6 col-lg-6">
+                        <div class="col-6 col-md-6 col-lg-6 categories">
                             <img src="images/categories/bag.png" alt="">
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="row d-flex align-items-center bg-primary bg-opacity-75 rounded-3 p-3">
+                    <div
+                        class="row m-3 d-flex align-items-center justify-content-center bg-primary bg-opacity-75 rounded-3 p-3">
                         <div class="col-6 col-md-6 col-lg-6 text-white">
                             <h1>Shoes</h1>
                         </div>
-                        <div class="col-6 col-md-6 col-lg-6">
+                        <div class="col-6 col-md-6 col-lg-6 categories">
                             <img src="images/categories/shoes.png" alt="">
                         </div>
                     </div>
@@ -185,9 +191,7 @@
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                             additional.</p>
                         <h5 class="mb-3">$120</h5>
-                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
-                            class="px-3 py-2 rounded-3 text-white">Buy now
-                            >></a>
+                        <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
 
@@ -198,9 +202,7 @@
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                             additional.</p>
                         <h5 class="mb-3">$120</h5>
-                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
-                            class="px-3 py-2 rounded-3 text-white">Buy now
-                            >></a>
+                        <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
 
@@ -211,9 +213,7 @@
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                             additional.</p>
                         <h5 class="mb-3">$120</h5>
-                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
-                            class="px-3 py-2 rounded-3 text-white">Buy now
-                            >></a>
+                        <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
             </div>
@@ -231,9 +231,8 @@
                         <h5 class="mb-3">$120</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
-                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
-                            class="px-3 py-2 rounded-3 text-white">Buy now
-                            >></a>
+
+                        <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
 
@@ -244,9 +243,8 @@
                         <h5 class="mb-3">$320</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
                             content.</p>
-                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
-                            class="px-3 py-2 rounded-3 text-white">Buy now
-                            >></a>
+
+                        <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
 
@@ -258,9 +256,8 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This card has even longer content than the first to show that equal
                             height action.</p>
-                        <a href="#" style="background-color:#ff136ecb; text-decoration: none;"
-                            class="px-3 py-2 rounded-3 text-white">Buy now
-                            >></a>
+
+                        <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
             </div>
@@ -275,8 +272,8 @@
                 <p>Get updates on sales, specials and more</p>
                 <form class="">
                     <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                    <button style="background-color:#ff136ecb" class="btn btn-outline-success text-white mt-2"
-                        type="submit">Submit</button>
+
+                    <button class="submit-btn mt-2">Submit</button>
                 </form>
             </div>
         </section>
