--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div
                         class="row m-3 d-flex align-items-center justify-content-center bg-primary bg-opacity-75 rounded-3 p-3">
                         <div class="col-6 col-md-6 col-lg-6 text-white">
-                            <h1>Shoes</h1>
+                            <h1>Shoe</h1>
                         </div>
                         <div class="col-6 col-md-6 col-lg-6 categories">
                             <img src="images/categories/shoes.png" alt="">
@@ -187,10 +187,10 @@
                 <div class="card shadow col-12 col-md-6 col-lg-4">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional.</p>
-                        <h5 class="mb-3">$120</h5>
+                        <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <h5 class="mb-3">$1289</h5>
                         <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
@@ -198,10 +198,11 @@
                 <div class="card shadow col-12 col-md-6 col-lg-4">
                     <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional.</p>
-                        <h5 class="mb-3">$120</h5>
+                        <h5 class="card-title">Reebok Pump
+                        </h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
+                        <h5 class="mb-3">$799</h5>
                         <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
@@ -209,10 +210,10 @@
                 <div class="card shadow col-12 col-md-6 col-lg-4">
                     <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional.</p>
-                        <h5 class="mb-3">$120</h5>
+                        <h5 class="card-title">Reebok All Terrain</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. </p>
+                        <h5 class="mb-3">$699</h5>
                         <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
                 </div>
@@ -228,9 +229,9 @@
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Red Bag</h5>
-                        <h5 class="mb-3">$120</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="mb-3">$1289</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
 
                         <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
@@ -240,9 +241,9 @@
                     <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Blue Bag</h5>
-                        <h5 class="mb-3">$320</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
+                        <h5 class="mb-3">$799</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
 
                         <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
@@ -252,10 +253,9 @@
                     <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Black Bag</h5>
-                        <h5 class="mb-3">$169</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
+                        <h5 class="mb-3">$699</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint.</p>
 
                         <button class="buy-now-button px-3 py-2">Buy now</button>
                     </div>
@@ -286,7 +286,7 @@
 
     <!-- footer-start -->
     <footer class="d-flex justify-content-center">
-        <p>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+        <p>©2022 Panda Commerce. All rights are reserved. Mithun, Bangladesh.</p>
     </footer>
     <!-- footer-end  -->
 
