--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
     <!-- header start  -->
 
     <header id="home">
@@ -270,11 +269,8 @@
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
-                <form class="">
-                    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-
-                    <button class="submit-btn mt-2">Submit</button>
-                </form>
+                <input type="email" class="form-control" type="text" placeholder="Your Email">
+                <button class="submit-btn mt-3 px-2 py-1">Submit</button>
             </div>
         </section>
 
@@ -286,10 +282,9 @@
 
     <!-- footer-start -->
     <footer class="d-flex justify-content-center">
-        <p>©2022 Panda Commerce. All rights are reserved. Mithun, Bangladesh.</p>
+        <p>©2022 Panda Commerce, All rights are reserved by PANDA, Bangladesh.</p>
     </footer>
     <!-- footer-end  -->
-
 
 
     <!-- bootstrap script -->
